<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAppDescHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/font_regular"
            android:text="@string/track_income_and_expenses"
            android:textColor="@color/color_accent"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvSubHeading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_2"
            android:layout_marginBottom="@dimen/dp_20"
            android:fontFamily="@font/font_book"
            android:text="@string/android_developer_assessment_test"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvObjectiveTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glSeperator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvObjectiveTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/objectives_achieved"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tvObjectiveDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvObjectiveDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:fontFamily="@font/font_regular"
            android:text="@string/objectives_accomplished"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/glSeperator1" />

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnExplore"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textColor="@color/color_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/glSeperator1"
            app:neumorph_backgroundColor="@android:color/holo_blue_bright"
            app:neumorph_lightSource="leftTop"
            app:neumorph_shadowColorDark="@color/background"
            app:neumorph_shadowElevation="2dp"
            app:neumorph_shapeType="basin"
            app:neumorph_strokeColor="@android:color/holo_blue_dark"
            app:neumorph_strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>