<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/phone_number"
            android:textColor="@color/color_accent"
            app:layout_constraintBottom_toTopOf="@id/cvNameCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cvNameCard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneNumber"
            app:neumorph_backgroundColor="@color/background"
            app:neumorph_lightSource="leftTop"
            app:neumorph_shadowColorDark="@color/background"
            app:neumorph_shadowElevation="2dp"
            app:neumorph_shapeAppearance="@style/CustomShapeBodyAppearance"
            app:neumorph_shapeType="pressed"
            app:neumorph_strokeColor="#B5C5D7"
            app:neumorph_strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etScreenName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/enter_screen_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="12dp"
                android:textColor="@color/color_accent"
                android:textColorHint="@android:color/darker_gray" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphButton
            android:id="@+id/btnNext"
            style="@style/Widget.Neumorph.Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/color_accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvNameCard"
            app:neumorph_backgroundColor="@android:color/holo_blue_bright"
            app:neumorph_lightSource="leftTop"
            app:neumorph_shadowColorDark="@color/background"
            app:neumorph_shadowElevation="2dp"
            app:neumorph_shapeType="basin"
            app:neumorph_strokeColor="@android:color/holo_blue_dark"
            app:neumorph_strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>