<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.HomeActivity">

        <LinearLayout
            android:id="@+id/llHeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_30"
            android:paddingTop="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_30"
            android:paddingBottom="@dimen/dp_10"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".presentation.home.HomeActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_2"
                android:fontFamily="@font/font_book"
                android:text="@string/welcome"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_regular"
                android:text="@string/user"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/sp_28"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleMonthlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_medium"
            android:text="@string/total_monthly_income"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llHeadline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMonthlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hundred"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleMonthlyIncome" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleYearlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:fontFamily="@font/font_medium"
            android:text="@string/total_annual_income"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMonthlyIncome" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvYearlyIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thousand"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="@dimen/sp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleYearlyIncome" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="@dimen/dp_10"
            app:cardElevation="@dimen/dp_6"
            app:cardMaxElevation="@dimen/dp_8"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvYearlyIncome">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp_10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAnalysisTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_book"
                    android:text="@string/category_based_analysis"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scrollbars="none"
                    android:layout_marginTop="@dimen/dp_20"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAnalysisTitle">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvFoodCardHome"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/background"
                            app:cardCornerRadius="@dimen/dp_10"
                            app:cardElevation="@dimen/dp_6"
                            app:cardMaxElevation="@dimen/dp_8"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/dp_10"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/tvCategoryTitle1"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/food"
                                        android:textColor="@color/color_accent"
                                        android:textSize="@dimen/sp_16"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <ImageView
                                        android:id="@+id/ivExpandArrowFood"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/ic_arrow_back" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <com.github.mikephil.charting.charts.PieChart
                                    android:id="@+id/pcFood"
                                    android:layout_width="match_parent"
                                    android:layout_height="300dp"
                                    android:visibility="gone" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvEntertainmentCardHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/background"
                            app:cardCornerRadius="@dimen/dp_10"
                            app:cardElevation="@dimen/dp_6"
                            app:cardMaxElevation="@dimen/dp_8"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/cvFoodCardHome">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/dp_10"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/tvCategoryTitle2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/entertainment"
                                        android:textColor="@color/color_accent"
                                        android:textSize="@dimen/sp_16"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <ImageView
                                        android:id="@+id/ivExpandArrowEntertainment"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/ic_arrow_back" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <com.github.mikephil.charting.charts.PieChart
                                    android:id="@+id/pcEntertainment"
                                    android:layout_width="match_parent"
                                    android:layout_height="300dp"
                                    android:visibility="gone" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvTransportationCardHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardBackgroundColor="@color/background"
                            app:cardCornerRadius="@dimen/dp_10"
                            app:cardElevation="@dimen/dp_6"
                            app:cardMaxElevation="@dimen/dp_8"
                            app:cardPreventCornerOverlap="true"
                            app:cardUseCompatPadding="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/cvEntertainmentCardHome">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/dp_10"
                                android:orientation="vertical">

                                <androidx.constraintlayout.widget.ConstraintLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:id="@+id/tvCategoryTitle3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/transportation"
                                        android:textColor="@color/color_accent"
                                        android:textSize="@dimen/sp_16"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintStart_toStartOf="parent"
                                        app:layout_constraintTop_toTopOf="parent" />

                                    <ImageView
                                        android:id="@+id/ivExpandArrowTransportation"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:layout_constraintBottom_toBottomOf="parent"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintTop_toTopOf="parent"
                                        app:srcCompat="@drawable/ic_arrow_back" />

                                </androidx.constraintlayout.widget.ConstraintLayout>

                                <com.github.mikephil.charting.charts.PieChart
                                    android:id="@+id/pcTransportation"
                                    android:layout_width="match_parent"
                                    android:layout_height="300dp"
                                    android:visibility="gone" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.core.widget.NestedScrollView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>